# PlanifyAI

./: .coverage 2  .coverage 3  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURAL_REVIEW_DAY2.md  ARCHITECTURAL_REVIEW_DAY3.md  ARCHITECTURE_ANALYSIS.md  BOUNDARY_DETECTION_FIX_REPORT.md  BRUTAL_REVIEW.md  CHANGELOG.md  COMPREHENSIVE_TECHNICAL_REVIEW.md  DAY2_QUICK_SUMMARY.md  DEVELOPMENT_ROADMAP.md  ENVIRONMENT_REPORT.md  ENVIRONMENT_SETUP_STATUS_REPORT.md  EVIDENCE_BASED_REVIEW.md  FINAL_SYSTEM_STATUS.md  FIX_REPORT_FINAL.md  FRONTEND_IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN.md  LICENSE  OPTIMIZATION_PHASE1A_REPORT.md  PHASE2_DAY1_REPORT.md  PHASE2_DAY2_REPORT.md  PHASE2_DAY3_REPORT.md  PHASE3_MILESTONE3_HANDOFF_REPORT.md  PHASE3_STRATEGIC_RECOMMENDATION.md  PHASE4_MILESTONE1_REPORT.md  PHASE4_MILESTONE2_REPORT.md  PHASE4_MILESTONE3_REPORT.md  PHASE_0_TRANSITION_REPORT.md  PLANIFYAI_V2_ARCHITECTURE.md  PLANIFYAI_V2_ROADMAP.docx  PROJECT_STATE_REPORT.md  PROJECT_STATUS.md  PROJECT_STATUS_REPORT.md  PlanifyAI_Comprehensive_Status_Report.md  README.md  (+37 more)
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
backend/: __init__.py
benchmarks/: README.md  __init__.py  benchmark_hsaga.py  benchmark_objectives.py  benchmark_reporter.py  benchmark_runner.py  run_benchmarks.py  test_cases.py
data/: jobs.db  test_jobs.db
docs/: ADAPTIVE_HSAGA_GUIDE.md  AGENT_MEMORY.md  ANALYSIS_FE_UX_001_A.md  FE_UX_001_A_checklist.md  FE_UX_002_A_checklist.md  PlanifyAI_8_Week_MVP_Roadmap_FINAL.md  PlanifyAI_Executive_Summary.md  README_EN.md  README_TR.md  (+11 more)
(+436 files in other folders)
